adl-frontend/src/test/resources/unit/error/semantic/itf/itf1.adl
//#SemanticError GroupId=MADL ErrorId=MISSING_COLLECTION_SIZE line=4

primitive itf.itf1 {
  provides api.Call as multiCall[];
  
  source {{ }};
}
